http request refactored

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-search-bar (searchSubmitted)="onSearchSubmit($event)"></app-search-bar>
-<app-page-list [data]="searchResults"></app-page-list>
+<div class="container">
+  <app-search-bar (searchSubmitted)="onSearchSubmit($event)"></app-search-bar>
+  <app-page-list
+    *ngIf="searchResults.length"
+    [data]="searchResults"
+  ></app-page-list>
+</div>
